--- a/example/src/AppBundle/Resources/views/Default/index.html.twig
+++ b/example/src/AppBundle/Resources/views/Default/index.html.twig
@@ -19,11 +19,11 @@
     var AUTH0_DOMAIN = '{{ AUTH0_DOMAIN }}';
     var AUTH0_CLIENT_ID = '{{ AUTH0_CLIENT_ID }}';
     </script>
-    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.0-beta.17/angular.js"></script>
-    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.0-beta.17/angular-cookies.js"></script>
-    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.0-beta.17/angular-route.js"></script>
-    <script type="text/javascript" src="https://cdn.auth0.com/js/lock-9.0.js"></script>
-    <script type="text/javascript" src="https://cdn.auth0.com/w2/auth0-angular-4.js"></script>
+    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.8/angular.js"></script>
+    <script type="text/javascript" src="https://code.angularjs.org/1.5.8/angular-cookies.js"></script>
+    <script type="text/javascript" src="https://code.angularjs.org/1.5.8/angular-route.js"></script>
+    <script type="text/javascript" src="http://cdn.auth0.com/js/lock/10.6/lock.min.js"></script>
+    <script type="text/javascript" src="https://cdn.rawgit.com/auth0/angular-lock/master/angular-lock.js"></script>
     <script src="//cdn.rawgit.com/auth0/angular-storage/master/dist/angular-storage.js" type="text/javascript"> </script>
     <script src="//cdn.rawgit.com/auth0/angular-jwt/master/dist/angular-jwt.js" type="text/javascript"> </script>
     <script type="text/javascript" src="{{ asset('bundles/app/js/app.js') }}"></script>
